' Generated by UML Generator
' Encoded: XP2xZi9034Nx-GgNMI55MwTOGOEqTRP355x7WCLaCl8uI2oFRsSK18fuQ5lFcUDxFKs6QdthNTfAYAZO0dbCQMQcyjiRVrCNQlbZ-7GRQHX8b3mx9y5OLqWCFueXnKuD3WxWtB2N7MlnKS6kayQTd1kCcUjfEp2JjqozaVWFSbytHx9EzrVya8kOq0b86OqBsqUkeCubmZehxfz6gwIDdbzBMfHGeAxJJR5OZd9SYvJbyMla7P8_p9wYbkNuUSgXoQU_00
' URL: http://www.plantuml.com/plantuml/uml/XP2xZi9034Nx-GgNMI55MwTOGOEqTRP355x7WCLaCl8uI2oFRsSK18fuQ5lFcUDxFKs6QdthNTfAYAZO0dbCQMQcyjiRVrCNQlbZ-7GRQHX8b3mx9y5OLqWCFueXnKuD3WxWtB2N7MlnKS6kayQTd1kCcUjfEp2JjqozaVWFSbytHx9EzrVya8kOq0b86OqBsqUkeCubmZehxfz6gwIDdbzBMfHGeAxJJR5OZd9SYvJbyMla7P8_p9wYbkNuUSgXoQU_00
' Generated on: 2025-11-14T12:50:51.924148362

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Transport {
  ~deliver(): void
}

class Truck {
  +deliver(): void
}

class Ship {
  +deliver(): void
}

class TransportFactory {
  +{static} create(type: String): Transport
}

class SimpleFactory {
  +{static} main(args: String[]): void
}

Truck ..|> Transport
Ship ..|> Transport
TransportFactory ..> Transport
@enduml